<resources>
    <string name="app_name">DemoContextMenu</string>
    <string name="action_settings">Settings</string>

    <string name="action_meowth">Meowth</string>
    <string name="action_pikachu">Pikachu</string>
    <string name="action_pokeball">Pokeball</string>
    <string name="action_psyduck">Psyduck</string>
    <string name="action_snorlax">Snorlax</string>

    <string name="action_browser">使用瀏覽器開啟</string>
    <string name="action_map">地圖</string>
    <string name="action_dial">調撥打電話界面</string>
    <string name="action_call">直接撥打電話</string>
    <string name="action_install">反安裝</string>
    <string name="action_uninstall">安裝</string>
    <string name="action_play_music">播放</string>
    <string name="start_2nd_activity">切換到App內部的其他畫面</string>


</resources>
